[package]
name = "actix_block_ai_crawling"
license = "AGPL"
description = "Actix Middleware that blocks Generative AI crawlers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
futures-util = "0.3.29"
